--- a/shipping-calculator.liquid
+++ b/shipping-calculator.liquid
@@ -27,7 +27,7 @@
 
 <script id="shipping-calculator-response-template"  type="text/x-jquery-tmpl">
   {% raw %}
-  <p id="shipping-rates-feedback" class="{{if sucesss}}success{{else}}error{{/if}}">
+  <p id="shipping-rates-feedback" class="{{if success}}success{{else}}error{{/if}}">
   {{if success}}
     {{if rates.length > 1}}
     There are ${rates.length} shipping rates available for ${address}, starting at ${Shopify.formatMoney(rates[0].price)}.
