--- a/shipping-calculator.liquid
+++ b/shipping-calculator.liquid
@@ -70,7 +70,7 @@ if (typeof Shopify.onCartShippingRatesUpdate === 'undefined') {
 {{ "http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js" | script_tag }}
 {{ "/services/javascripts/countries.js" | script_tag }}
 {{ "shopify_common.js" | shopify_asset_url | script_tag }}
-{{ "jquery.cart.js" | asset_url | script_tag }} 
+{{ "jquery.cart.min.js" | asset_url | script_tag }} 
 
 <script type="text/javascript" charset="utf-8">
 //<![CDATA[
