--- a/shipping-calculator.liquid
+++ b/shipping-calculator.liquid
@@ -30,7 +30,7 @@
   <p id="shipping-rates-feedback" class="{{if success}}success{{else}}error{{/if}}">
   {{if success}}
     {{if rates.length > 1}}
-    There are ${rates.length} shipping rates available for ${address}, starting at {{html Shopify.formatMoney(rates[0].price)}}.
+    There are ${rates.length} shipping rates available for ${address}, starting at {{html Shopify.Cart.ShippingCalculator.formatRate(rates[0].price)}}.
     {{else}}
       {{if rates.length == 1}}
       There is one shipping rate available for ${address}.
@@ -44,7 +44,7 @@
   </p>
   <ul id="shipping-rates">
     {{each( index, rate ) rates}}
-    <li>${rate.name} at {{html Shopify.formatMoney(rate.price)}}</li>
+    <li>${rate.name} at {{html Shopify.Cart.ShippingCalculator.formatRate(rate.price)}}</li>
     {{/each}}
   </ul>
   {% endraw %} 
@@ -67,18 +67,15 @@ if (typeof jQuery === 'undefined') {
 {{ "shopify_common.js" | shopify_asset_url | script_tag }}
 {{ "jquery.cart.min.js" | asset_url | script_tag }} 
 
-<script type="text/javascript" charset="utf-8">
-//<![CDATA[
-
-Shopify.money_format = "{{ shop.money_with_currency_format }}";
+<script>
 
 Shopify.Cart.ShippingCalculator.show( {
   submitButton: '{{ settings.shipping_calculator_submit_button_label }}', 
   submitButtonDisabled: '{{ settings.shipping_calculator_submit_button_label_disabled }}'{% if shop.customer_accounts_enabled and customer %},
-  customerIsLoggedIn: true{% endif %}
+  customerIsLoggedIn: true{% endif %},
+  moneyFormat: {{ shop.money_with_currency_format | json }}
 } );
 
-//]]>
 </script>
 
 {% endunless %}
