Include the css tag in the snippet to reduce the number of steps needed to install

--- a/shipping-calculator.liquid
+++ b/shipping-calculator.liquid
@@ -14,6 +14,8 @@
 {% endif %}
 
 
+{{ 'shipping-calculator.css' | asset_url | stylesheet_tag }}
+
 <div id="shipping-calculator">
     
   <h3>{{ settings.shipping_calculator_heading }}</h3>
