--- a/shipping-calculator.liquid
+++ b/shipping-calculator.liquid
@@ -18,7 +18,7 @@
 
 <div id="shipping-calculator">
     
-  <h3>{{ settings.shipping_calculator_heading }}</h3>
+  <h3>{{ sca_title }}</h3>
 
   <div>
     <p id="address_province_container" style="display:none;">
@@ -34,7 +34,7 @@
   <p>
     <label for="address_zip">Zip/Postal Code</label>
     <input type="text" id="address_zip" name="address[zip]"{% if shop.customer_accounts_enabled and customer %} value="{{ customer.default_address.zip }}"{% endif %} />
-    <input type="button" class="get-rates" value="{{ settings.shipping_calculator_submit_button_label }}" />
+    <input type="button" class="get-rates" value="{{ sca_calculate }}" />
   </p> 
 
   <div id="wrapper-response"></div>
@@ -74,11 +74,11 @@ if (typeof jQuery === 'undefined') {
   document.write({{ "http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" | script_tag | json }});
   document.write('<script type="text/javascript">jQuery.noConflict();<\/script>');
 }
-
+jQuery(document).ready(function() {
+  jQuery.getScript("http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js");
+});
 //]]>
 </script>
-
-{{ "http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js" | script_tag }}
 {{ "/services/javascripts/countries.js" | script_tag }}
 {{ "shopify_common.js" | shopify_asset_url | script_tag }}
 {{ "jquery.cart.min.js" | asset_url | script_tag }} 
@@ -86,8 +86,8 @@ if (typeof jQuery === 'undefined') {
 <script>
 
 Shopify.Cart.ShippingCalculator.show( {
-  submitButton: '{{ settings.shipping_calculator_submit_button_label }}', 
-  submitButtonDisabled: '{{ settings.shipping_calculator_submit_button_label_disabled }}'{% if shop.customer_accounts_enabled and customer %},
+  submitButton: '{{ sca_calculate }}', 
+  submitButtonDisabled: '{{ sca_calculating }}'{% if shop.customer_accounts_enabled and customer %},
   customerIsLoggedIn: true{% endif %},
   moneyFormat: {{ shop.money_with_currency_format | json }}
 } );
