--- a/shipping-calculator.liquid
+++ b/shipping-calculator.liquid
@@ -18,7 +18,7 @@
   <p>
     <label for="address_zip">Zip/Postal Code</label>
     <input type="text" id="address_zip" name="address[zip]"{% if shop.customer_accounts_enabled and customer %} value="{{ customer.default_address.zip }}"{% endif %} />
-    <input type="button" class="get-rates" value="{{ settings.shipping_calculator_submit_button_label }}" />
+    <input type="button" class="get-rates btn button" value="{{ settings.shipping_calculator_submit_button_label }}" />
   </p> 
 
   <div id="wrapper-response"></div>
@@ -50,19 +50,7 @@
   {% endraw %} 
 </script>
 
-<script type="text/javascript" charset="utf-8">
-//<![CDATA[
-
-// Including jQuery conditionnally.
-if (typeof jQuery === 'undefined') {
-  document.write({{ "http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" | script_tag | json }});
-  document.write('<script type="text/javascript">jQuery.noConflict();<\/script>');
-}
-
-//]]>
-</script>
-
-{{ "http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js" | script_tag }}
+{{ "//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js" | script_tag }}
 {{ "/services/javascripts/countries.js" | script_tag }}
 {{ "shopify_common.js" | shopify_asset_url | script_tag }}
 {{ "jquery.cart.min.js" | asset_url | script_tag }} 
@@ -70,8 +58,8 @@ if (typeof jQuery === 'undefined') {
 <script>
 
 Shopify.Cart.ShippingCalculator.show( {
-  submitButton: '{{ settings.shipping_calculator_submit_button_label }}', 
-  submitButtonDisabled: '{{ settings.shipping_calculator_submit_button_label_disabled }}'{% if shop.customer_accounts_enabled and customer %},
+  submitButton: {{ settings.shipping_calculator_submit_button_label | json }}, 
+  submitButtonDisabled: {{ settings.shipping_calculator_submit_button_label_disabled | json }}{% if shop.customer_accounts_enabled and customer %},
   customerIsLoggedIn: true{% endif %},
   moneyFormat: {{ shop.money_with_currency_format | json }}
 } );
