--- a/shipping-calculator.liquid
+++ b/shipping-calculator.liquid
@@ -51,7 +51,7 @@
 </script>
 
 {{ "//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js" | script_tag }}
-{{ "/services/javascripts/countries.js" | script_tag }}
+{{ "countries.js" | shopify_asset_url | script_tag }}
 {{ "shopify_common.js" | shopify_asset_url | script_tag }}
 {{ "jquery.cart.min.js" | asset_url | script_tag }} 
 
