--- a/shipping-calculator.liquid
+++ b/shipping-calculator.liquid
@@ -50,6 +50,7 @@
   {% endraw %} 
 </script>
 
+{{ "api.jquery.js" | shopify_asset_url | script_tag }}
 {{ "//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js" | script_tag }}
 {{ "/services/javascripts/countries.js" | script_tag }}
 {{ "shopify_common.js" | shopify_asset_url | script_tag }}
