Use Underscore.js for template

--- a/shipping-calculator.css
+++ b/shipping-calculator.css
@@ -1,62 +1,1 @@
-/* Shipping Calculator Styles */
-
-#shipping-calculator {
-width: 320px;
-padding: 15px 15px 5px 15px;
-margin: 30px 0;
-clear: both;
-overflow: hidden;
-}
-
-.country {
-position: relative;
-top: 0.6em;
-}
-
-#shipping-calculator h3 {
-font-size: 14px;
-margin: 0.5em 0;
-}
-
-#shipping-calculator select  {
-width: 150px;
-}
-
-#shipping-calculator input[type="text"]  {
-width: 138px;
-}
-
-#shipping-calculator p {
-margin-bottom: 0.2em;
-}
-
-#shipping-calculator label {
-display: block;
-line-height: 1.6;
-font-size: 12px;
-font-weight: normal;
-}
-
-#wrapper-response {
-margin-bottom: 15px;
-}
-
-#wrapper-response * {
-font-size: 12px;
-}
-
-#shipping-rates {
-list-style-type: square;
-padding-left: 0;
-margin-left: 0;
-list-style-position: inside;
-}
-
-#address_province_container {
-float: right;
-margin-left: 20px;
-}
-
-.get-rates {
-margin-left: 15px !important;
-}
+.field{clear:both;margin:0 0 1em;font-size:15px}.field:last-child{margin-bottom:1em}.field:after,.field:before{content:"";display:table}.field:after{clear:both}.field{zoom:1}.field>label{margin:0 0 .3em;display:block;font-size:1em}.field input[type=checkbox]+label,.field input[type=radio]+span{display:inline;padding-left:.3em;vertical-align:middle;font-size:1em}.field input[type=date],.field input[type=email],.field input[type=number],.field input[type=password],.field input[type=tel],.field input[type=text],.field input[type=url],.field textarea{margin:0;padding:.85em 1.2em;font-size:.95em;background-color:#FFF;border:1px solid rgba(0,0,0,.15);outline:0;color:rgba(0,0,0,.7);border-radius:.3125em;-webkit-transition:background-color .3s ease-out,-webkit-box-shadow .2s ease,border-color .2s ease;transition:background-color .3s ease-out,box-shadow .2s ease,border-color .2s ease;-webkit-box-shadow:0 0 rgba(0,0,0,.3)inset;box-shadow:0 0 rgba(0,0,0,.3)inset;-webkit-appearance:none;-webkit-tap-highlight-color:rgba(255,255,255,0);-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;box-sizing:border-box;max-width:100%}.field textarea{line-height:1.33;min-height:8em;height:12em;max-height:24em;width:100%;resize:vertical}.field input[type=radio]{-webkit-appearance:radio}.field input[type=checkbox],.field input[type=radio]{vertical-align:middle}
