--- a/shipping-calculator.liquid
+++ b/shipping-calculator.liquid
@@ -5,56 +5,52 @@
   <h3>{{ settings.shipping_calculator_heading }}</h3>
 
   <div>
-    <p id="address_province_container" style="display:none;">
-      <label for="address_province" id="address_province_label">Province</label>
-      <select id="address_province" class="address_form" name="address[province]" data-default="{% if shop.customer_accounts_enabled and customer and customer.default_address.province != '' %}{{ customer.default_address.province }}{% endif %}"></select>
-    </p>  
-    <p>
+    <p class="field">
       <label for="address_country">Country</label>
       <select id="address_country" name="address[country]" data-default="{% if shop.customer_accounts_enabled and customer %}{{ customer.default_address.country }}{% elsif settings.shipping_calculator_default_country != '' %}{{ settings.shipping_calculator_default_country }}{% endif %}">{{ country_option_tags }}</select>
     </p>
+    <p class="field" id="address_province_container" style="display:none;">
+      <label for="address_province" id="address_province_label">Province</label>
+      <select id="address_province" name="address[province]" data-default="{% if shop.customer_accounts_enabled and customer and customer.default_address.province != '' %}{{ customer.default_address.province }}{% endif %}"></select>
+    </p>  
+    <p class="field">
+      <label for="address_zip">Zip/Postal Code</label>
+      <input type="text" id="address_zip" name="address[zip]"{% if shop.customer_accounts_enabled and customer %} value="{{ customer.default_address.zip }}"{% endif %} />
+    </p>
+    <p class="field">
+      <input type="button" class="get-rates btn button" value="{{ settings.shipping_calculator_submit_button_label }}" />
+    </p>
   </div>
- 
-  <p>
-    <label for="address_zip">Zip/Postal Code</label>
-    <input type="text" id="address_zip" name="address[zip]"{% if shop.customer_accounts_enabled and customer %} value="{{ customer.default_address.zip }}"{% endif %} />
-    <input type="button" class="get-rates btn button" value="{{ settings.shipping_calculator_submit_button_label }}" />
-  </p> 
 
   <div id="wrapper-response"></div>
   
 </div>
 
-<script id="shipping-calculator-response-template" type="text/x-jquery-tmpl">
-  {% raw %}
-  <p id="shipping-rates-feedback" class="{{if success}}success{{else}}error{{/if}}">
-  {{if success}}
-    {{if rates.length > 1}}
-    There are ${rates.length} shipping rates available for ${address}, starting at {{html Shopify.Cart.ShippingCalculator.formatRate(rates[0].price)}}.
-    {{else}}
-      {{if rates.length == 1}}
-      There is one shipping rate available for ${address}.
-      {{else}}
-      We do not ship to this destination.
-      {{/if}}
-    {{/if}}
-  {{else}}
-    ${errorFeedback}
-  {{/if}}
+<script id="shipping-calculator-response-template" type="text/template">
+  <p id="shipping-rates-feedback" <% if (success) { %> class="success" <% } else { %> class="error" <% } %>>
+  <% if (success) { %>
+    <% if (rates.length > 1) { %> 
+    There are <%= rates.length %> shipping rates available for <%= address %>, starting at <%= rates[0].price %>.
+    <% } else if (rates.length == 1) { %>
+    There is one shipping rate available for <%= address %>.
+    <% } else { %>
+    We do not ship to this destination.
+    <% } %>
+  <% } else { %>
+    <%= errorFeedback %>
+  <% } %>
   </p>
   <ul id="shipping-rates">
-    {{each( index, rate ) rates}}
-    <li>${rate.name} at {{html Shopify.Cart.ShippingCalculator.formatRate(rate.price)}}</li>
-    {{/each}}
-  </ul>
-  {% endraw %} 
+    <% for (var i=0; i<rates.length; i++) { %>
+    <li><%= rates[i].name %> at <%= rates[i].price %></li>
+    <% } %>
+  </ul> 
 </script>
 
-{{ "api.jquery.js" | shopify_asset_url | script_tag }}
-{{ "//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js" | script_tag }}
-{{ "/services/javascripts/countries.js" | script_tag }}
-{{ "shopify_common.js" | shopify_asset_url | script_tag }}
-{{ "jquery.cart.min.js" | asset_url | script_tag }} 
+{{ '//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js' | script_tag }}
+{{ '/services/javascripts/countries.js' | script_tag }}
+{{ 'shopify_common.js' | shopify_asset_url | script_tag }}
+{{ 'jquery.cart.min.js' | asset_url | script_tag }} 
 
 <script>
 
