Add default values so that we don't need theme settings + fix to money formatting

--- a/shipping-calculator.css
+++ b/shipping-calculator.css
@@ -1,6 +1,6 @@
 #shipping-calculator .field {
   float: left;
-  margin: 0 .3em 1em;
+  margin: 0 0.6em 1em 0;
   font-size: 15px
 }  
 #shipping-calculator .field label {
