--- a/shipping-calculator.liquid
+++ b/shipping-calculator.liquid
@@ -2,7 +2,7 @@
 
 <div id="shipping-calculator">
     
-  <h3>{{ settings.shipping_calculator_heading }}</h3>
+  <h3>{{ settings.shipping_calculator_heading | default: 'Get shipping estimates' }}</h3>
 
   <div>
     <p class="field">
@@ -18,7 +18,7 @@
       <input type="text" id="address_zip" name="address[zip]"{% if shop.customer_accounts_enabled and customer %} value="{{ customer.default_address.zip }}"{% endif %} />
     </p>
     <p class="field">
-      <input type="button" class="get-rates btn button" value="{{ settings.shipping_calculator_submit_button_label }}" />
+      <input type="button" class="get-rates btn button" value="{{ settings.shipping_calculator_submit_button_label | default: 'Calculate shipping' }}" />
     </p>
   </div>
 
@@ -50,13 +50,13 @@
 {{ '//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js' | script_tag }}
 {{ '/services/javascripts/countries.js' | script_tag }}
 {{ 'shopify_common.js' | shopify_asset_url | script_tag }}
-{{ 'jquery.cart.min.js' | asset_url | script_tag }} 
+{{ 'jquery.cart.min.js' | asset_url | script_tag }}
 
 <script>
 
 Shopify.Cart.ShippingCalculator.show( {
-  submitButton: {{ settings.shipping_calculator_submit_button_label | json }}, 
-  submitButtonDisabled: {{ settings.shipping_calculator_submit_button_label_disabled | json }}{% if shop.customer_accounts_enabled and customer %},
+  submitButton: "{{ settings.shipping_calculator_submit_button_label | default: 'Calculate shipping' }}", 
+  submitButtonDisabled: "{{ settings.shipping_calculator_submit_button_label_disabled | default: 'Calculating...' }}"{% if shop.customer_accounts_enabled and customer %},
   customerIsLoggedIn: true{% endif %},
   moneyFormat: {{ shop.money_with_currency_format | json }}
 } );
