--- a/shipping-calculator.css
+++ b/shipping-calculator.css
@@ -27,6 +27,14 @@
 #shipping-calculator .field:last-child:before { 
   content: "\00A0"; display: block; margin: 0 0 .3em; font-size: 1em; 
 }
-#shipping-calculator #wrapper-response { 
-  clear: both; 
+#shipping-calculator #wrapper-response {
+  clear: both;
+}
+@media (max-width: 800px) {
+  #shipping-calculator .field {
+    float: none;
+  }
+  #shipping-calculator .field:last-child:before { 
+    content: none;
+  }
 }
