--- a/shipping-calculator.liquid
+++ b/shipping-calculator.liquid
@@ -47,6 +47,10 @@
   </ul> 
 </script>
 
+<!--[if lte IE 8]> 
+<style> #shipping-calculator { display: none; } </style> 
+<![endif]--> 
+
 {{ '//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js' | script_tag }}
 {{ '/services/javascripts/countries.js' | script_tag }}
 {{ 'shopify_common.js' | shopify_asset_url | script_tag }}
