--- a/shipping-calculator.liquid
+++ b/shipping-calculator.liquid
@@ -51,7 +51,7 @@
 <style> #shipping-calculator { display: none; } </style> 
 <![endif]--> 
 
-{{ '//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js' | script_tag }}
+{{ '//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js' | script_tag }}
 {{ '/services/javascripts/countries.js' | script_tag }}
 {{ 'shopify_common.js' | shopify_asset_url | script_tag }}
 {{ 'jquery.cart.min.js' | asset_url | script_tag }}
@@ -59,8 +59,8 @@
 <script>
 
 Shopify.Cart.ShippingCalculator.show( {
-  submitButton: "{{ settings.shipping_calculator_submit_button_label | default: 'Calculate shipping' }}", 
-  submitButtonDisabled: "{{ settings.shipping_calculator_submit_button_label_disabled | default: 'Calculating...' }}"{% if shop.customer_accounts_enabled and customer %},
+  submitButton: {{ settings.shipping_calculator_submit_button_label | default: 'Calculate shipping' | json }}, 
+  submitButtonDisabled: {{ settings.shipping_calculator_submit_button_label_disabled | default: 'Calculating...' | json }}{% if customer %},
   customerIsLoggedIn: true{% endif %},
   moneyFormat: {{ shop.money_with_currency_format | json }}
 } );
